# tree-sitter-utlc

./: Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-utlc.h  tree-sitter-utlc.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_utlc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRust/: rust.h
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: source_files.txt
