[package]
name = "tree-sitter-utlc"
description = "Tree-sitter grammar for utlc: a subset of Scheme that's restricted, but enough to facilitate programming in the untyped lambda-calculus."
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "utlc"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-utlc"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.2"

[build-dependencies]
cc = "1.0.87"
